# Fidgety

./: .gitignore  BUILD.md  BUILD_FGMK.md  BUILD_MK.md  CMakeLists.txt  Makefile  README.md  STATUS.md  fgmk  gdbout.txt
cmake/: add_dependencies.cmake  add_my_library.cmake  googletest_include.cmake  qt_major_compat.cmake
include/: fidgety.hpp
include/fidgety/: _general.hpp  _tests.hpp  _utils.hpp  _utils_json.hpp  _utils_qt.hpp  appdata.hpp  config.h.in  database.hpp  decoder.hpp  dylib.hpp  editor.hpp  encoder.hpp  exception.hpp  extensions.hpp  normal_conf_decoder.cpp  options.hpp  selector.hpp  verifier.hpp
include/fidgety/database/: ito_database.hpp
include/fidgety/decoder/: normal_conf_decoder.hpp
include/fidgety/editor/: app.hpp  elementwidget.hpp  homepage.hpp  windowwidget.hpp
include/fidgety/encoder/: normal_conf_encoder.hpp
include/fidgety/options/: _fwd.hpp  _option.hpp  _option_editor.hpp  _option_exception.hpp  _option_identifier.hpp  _option_value.hpp  _validator.hpp  _validator_context.hpp  _validator_message.hpp
resources/qml/: CMakeLists.txt  ConfigFilesModel.qml  Homepage.qml  homepage.qml  qml.qrc
resources/tests/database/: ito_0.json
resources/tests/decoder/: test_0.conf  test_0_answer.json  test_1.conf  test_2.conf
resources/tests/encoder/: test_1.json  test_1_answer.conf
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp
src/database/: CMakeLists.txt  database.cpp  ito_database.cpp  ito_json.cpp
src/decoder/: CMakeLists.txt  decoder.cpp  normal_conf_decoder.cpp
src/editor/: CMakeLists.txt  app.cpp  editor.cpp  elementwidget.cpp  homepage.cpp  windowwidget.cpp
src/encoder/: CMakeLists.txt  encoder.cpp  normal_conf_encoder.cpp
src/exception/: CMakeLists.txt  exception.cpp
src/options/: CMakeLists.txt  option_identifier.cpp  option_value.cpp  options.cpp  validator.cpp
src/private/: CMakeLists.txt  json.cpp  qt.cpp  string.cpp
src/selector/: CMakeLists.txt  loader.cpp  selector.cpp
src/verifier/: CMakeLists.txt  verifier.cpp
tests/: CMakeLists.txt
tests/_utils/: CMakeLists.txt  utils_string.cpp
tests/database/: CMakeLists.txt  ito.cpp
tests/decoder/: CMakeLists.txt  decoding.cpp  sanity_check.cpp
tests/dylib/: CMakeLists.txt  dylib_hello.cpp  dylib_hello.hpp  dylib_hello_lib.cpp
tests/encoder/: CMakeLists.txt  encoding.cpp
tests/exception/: CMakeLists.txt  exceptions.cpp
tests/options/: CMakeLists.txt  dummies.hpp  option.cpp  option_identifier.cpp  option_value.cpp  option_value_inner.cpp  validator.cpp  validator_context.cpp  validator_message.cpp
tests/selector/: CMakeLists.txt  selector_decoder.cpp  selector_encoder.cpp  selector_exp2.cpp  selector_validator.cpp  selector_vcc.cpp
tests/verifier/: CMakeLists.txt  verifier.cpp
