add_subdirectory(app)
add_subdirectory(database)
add_subdirectory(decoder)
add_subdirectory(editor)
add_subdirectory(encoder)
add_subdirectory(exception)
add_subdirectory(options)
add_subdirectory(private)
add_subdirectory(selector)
add_subdirectory(verifier)

fidgety_add_my_library(FidgetyDylib STATIC)
set_target_properties(FidgetyDylib PROPERTIES OUTPUT_NAME fidgety_dylib)
fidgety_link_common_libraries(FidgetyDylib)
fidgety_link_exception(FidgetyDylib)
target_link_libraries(FidgetyDylib PUBLIC ${CMAKE_DL_LIBS})
fidgety_install_library(FidgetyDylib fidgety_dylib_config.cmake)
