fidgety_add_my_library(FidgetyDatabase STATIC database.cpp)
set_target_properties(FidgetyDatabase PROPERTIES OUTPUT_NAME fidgety_database)
fidgety_set_output_directory(FidgetyDatabase)
fidgety_link_common_libraries(FidgetyDatabase)
fidgety_link_exception(FidgetyDatabase)
target_link_libraries(FidgetyDatabase PUBLIC FidgetyVerifier FidgetyOptions FidgetySelector)
fidgety_install_library(FidgetyDatabase fidgety_database_config.cmake)

fidgety_add_my_library(FidgetyItoDatabase STATIC ito_database.cpp ito_json.cpp)
set_target_properties(FidgetyItoDatabase PROPERTIES OUTPUT_NAME fidgety_ito_database)
fidgety_set_output_directory(FidgetyItoDatabase)
fidgety_link_common_libraries(FidgetyItoDatabase)
target_link_libraries(FidgetyItoDatabase PUBLIC FidgetyDatabase _FidgetyUtilsJson)
target_link_libraries(FidgetyItoDatabase PUBLIC Boost::boost Boost::filesystem)
target_link_libraries(FidgetyItoDatabase PUBLIC nlohmann_json::nlohmann_json)
fidgety_install_library(FidgetyItoDatabase fidgety_ito_database_config.cmake)
