fidgety_create_test(options_option_identifier option_identifier.cpp)
target_link_libraries(options_option_identifier PRIVATE Fidgety::FidgetyOptions)

fidgety_create_test(options_option option.cpp)
target_link_libraries(options_option PRIVATE Fidgety::FidgetyOptions)

fidgety_create_test(options_validator validator.cpp)
target_link_libraries(options_validator PRIVATE Fidgety::FidgetyOptions)

fidgety_create_test(options_validator_message validator_message.cpp)
target_link_libraries(options_validator_message PRIVATE Fidgety::FidgetyOptions)

fidgety_create_test(options_validator_context validator_context.cpp)
target_link_libraries(options_validator_context PRIVATE Fidgety::FidgetyOptions)

fidgety_create_test(options_option_value_inner option_value_inner.cpp)
target_link_libraries(options_option_value_inner PRIVATE Fidgety::FidgetyOptions)

fidgety_create_test(options_option_value option_value.cpp)
target_link_libraries(options_option_value PRIVATE Fidgety::FidgetyOptions)